# resumoSAA

./: .gitignore  CEP 2.0.xlsm  README.md  config.toml  module_resumosaa.xml  pom.xml  resumosaa.xml  setup.cfg
DataEntry/: DADOS MEDIDOR.xls  relatorio_medida_ponto CEP.xlsx  relatorio_medida_ponto.xls
idsa/: Base.xlsb
in/: relatorio_medida_ponto.xls
src/main/java/: Main.java
src/main/java/analises/: Analise.java  AnaliseFP.java  AnalyzeSF.java
src/main/java/analysis/: Analise.java  Analyze.java
src/main/java/core/: Core.java  DrawTable.java  OpenExcel.java
src/main/java/model/: DrawPrintResult.java  Equipamento.java  Equipment.java  PrintResult.java
src/main/java/utils/: AbreExcel.java  ConsoleUtils.java  DownloadExcel.java  DrawTable.java  GithubUpdate.java  HttpClientExample.java  Utils.java
