[metadata]
name = resumosaa
author = Jeferson Machado
author-email = jeferson.m159@gmail.com
summary =
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

license = MIT
classifier =
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    resumosaa

[files]
packages =
    resumosaa